--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,7 +43,7 @@ jobs:
         uses: actions/cache/restore@main
         with:
           path: |
-            /home/runner/haxelib
+            home/runner/haxelib
             ~/.gradle
             export/release/android/haxe
             export/release/android/obj
@@ -51,7 +51,7 @@ jobs:
 
       - name: Install Haxelib
         run: |
-          haxelib setup /home/runner/haxelib
+          haxelib setup home/runner/haxelib
           haxelib install hxcpp 4.2.1 > /dev/null
           haxelib install lime 7.9.0
           haxelib install openfl
